add jacoco coveralls stuff